test/files/ill-typed/009_for-loop_typed.lam
for x in [0..1] do
    1+x : Bool
